headers/base/orxType.h


  typedef float                   orxFLOAT;
    typedef float                 orxFLOAT;
typedef enum __orxSTATUS_t
{
  orxSTATUS_FAILURE = 0,          
  orxSTATUS_SUCCESS,              
  orxSTATUS_NUMBER,               
  orxSTATUS_NONE = orxENUM_NONE   
} orxSTATUS;