src/norx/oobject.nim


proc getPivot*(pstObject: ptr orxOBJECT; pvPivot: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetPivot", dynlib: libORX.}
  ## Get object pivot. See orxObject_SetPivot() for a more detailed explanation.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pvPivot        Object pivot
  ##  @return      orxVECTOR / nil

proc getOrigin*(pstObject: ptr orxOBJECT; pvOrigin: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetOrigin", dynlib: libORX.}
  ## Get object origin. See orxObject_SetOrigin() for a more detailed explanation.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pvOrigin       Object origin
  ##  @return      orxVECTOR / nil

proc getSize*(pstObject: ptr orxOBJECT; pvSize: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetSize", dynlib: libORX.}
  ## Gets object size. See orxObject_SetSize() for a more detailed explanation.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pvSize         Object's size
  ##  @return      orxVECTOR / nil

proc setPosition*(pstObject: ptr orxOBJECT; pvPosition: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxObject_SetPosition", dynlib: libORX.}
  ## @}
  ## @name Frame
  ##  @{
  ## Sets object position in its parent's reference frame. See orxObject_SetWorldPosition() for setting an object's
  ##  position in the global reference frame.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvPosition     Object position
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setWorldPosition*(pstObject: ptr orxOBJECT; pvPosition: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxObject_SetWorldPosition", dynlib: libORX.}
  ## Sets object position in the global reference frame. See orxObject_SetPosition() for setting an object's position
  ##  in its parent's reference frame.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvPosition     Object world position
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setRotation*(pstObject: ptr orxOBJECT; fRotation: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxObject_SetRotation", dynlib: libORX.}
  ## Sets object rotation in its parent's reference frame. See orxObject_SetWorldRotation() for setting an object's
  ##  rotation in the global reference frame.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fRotation      Object rotation (radians)
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setWorldRotation*(pstObject: ptr orxOBJECT; fRotation: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxObject_SetWorldRotation", dynlib: libORX.}
  ## Sets object rotation in the global reference frame. See orxObject_SetRotation() for setting an object's rotation
  ##  in its parent's reference frame.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fRotation      Object world rotation (radians)
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setScale*(pstObject: ptr orxOBJECT; pvScale: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxObject_SetScale", dynlib: libORX.}
  ## Sets object scale in its parent's reference frame. See orxObject_SetWorldScale() for setting an object's scale
  ##  in the global reference frame.
  ##  See orxObject_SetSize() for a deeper explanation of the "size" of an object.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvScale        Object scale vector
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setWorldScale*(pstObject: ptr orxOBJECT; pvScale: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxObject_SetWorldScale", dynlib: libORX.}
  ## Sets object scale in the global reference frame. See orxObject_SetScale() for setting an object's scale in its
  ##  parent's reference frame.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvScale        Object world scale vector
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getPosition*(pstObject: ptr orxOBJECT; pvPosition: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetPosition", dynlib: libORX.}
  ## Get object position. See orxObject_SetPosition().
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pvPosition     Object position
  ##  @return      orxVECTOR / nil

proc getWorldPosition*(pstObject: ptr orxOBJECT; pvPosition: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetWorldPosition", dynlib: libORX.}
  ## Get object world position. See orxObject_SetWorldPosition().
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pvPosition     Object world position
  ##  @return      orxVECTOR / nil

proc getRotation*(pstObject: ptr orxOBJECT): orxFLOAT {.cdecl,
    importc: "orxObject_GetRotation", dynlib: libORX.}
  ## Get object rotation. See orxObject_SetRotation().
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxFLOAT (radians)

proc getWorldRotation*(pstObject: ptr orxOBJECT): orxFLOAT {.cdecl,
    importc: "orxObject_GetWorldRotation", dynlib: libORX.}
  ## Get object world rotation. See orxObject_SetWorldRotation().
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxFLOAT (radians)

proc getScale*(pstObject: ptr orxOBJECT; pvScale: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetScale", dynlib: libORX.}
  ## Get object scale. See orxObject_SetScale().
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pvScale        Object scale vector
  ##  @return      Scale vector

proc getWorldScale*(pstObject: ptr orxOBJECT; pvScale: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxObject_GetWorldScale", dynlib: libORX.}
  ## Gets object world scale. See orxObject_SetWorldScale().
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pvScale        Object world scale
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setParent*(pstObject: ptr orxOBJECT; pParent: pointer): orxSTATUS {.
    cdecl, importc: "orxObject_SetParent", dynlib: libORX.}
  ## @}
  ## @name Parent
  ##  @{
  ## Sets an object parent (in the frame hierarchy). Parenthood in orx is about the transformation (position,
  ##  rotation, scale) of objects. Transformation of objects are compounded in a frame hierarchy. Compare this
  ##  with orxObject_SetOwner()
  ##  Note that the "ChildList" field of an object's config section implies two things; that the object is both
  ##  the owner (orxObject_SetOwner()) and the parent (orxObject_SetParent()) of its children. There is an
  ##  exception to this though; when an object's child has a parent camera, the object is only the owner, and
  ##  the camera is the parent.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pParent        Parent structure to set (object, spawner, camera or frame) / nil
  ##  @return      orsSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getParent*(pstObject: ptr orxOBJECT): ptr orxSTRUCTURE {.cdecl,
    importc: "orxObject_GetParent", dynlib: libORX.}
  ## Gets object's parent. See orxObject_SetParent() for a more detailed explanation.
  ##  @param[in]   _pstObject    Concerned object
  ##  @return      Parent (object, spawner, camera or frame) / nil

proc getChild*(pstObject: ptr orxOBJECT): ptr orxOBJECT {.cdecl,
    importc: "orxObject_GetChild", dynlib: libORX.}
  ## Gets object's first child object. See orxObject_SetOwner() and orxObject_SetParent() for a comparison of
  ##  ownership and parenthood in Orx.
  ##  Note: this function will filter out any camera or spawner and retrieve the first child object.
  ##  This function is typically used to iterate over the children objects of an object.
  ##  @param[in]   _pstObject    Concerned object
  ##  @return      First child object / nil
  # TODO: Fix code examples
  #  For example:
  #  @code
  #  for(orxOBJECT *pstChild = orxOBJECT(orxObject_GetChild(pstObject));
  #      pstChild != nil;
  #      pstChild = orxOBJECT(orxObject_GetSibling(pstChild)))
  #  {
  #      DoSomething(pstChild); // DoSomething() can recurse into the children of pstChild for a depth-first traversal
  #  }
  #  @endcode

proc getSibling*(pstObject: ptr orxOBJECT): ptr orxSTRUCTURE {.cdecl,
    importc: "orxObject_GetSibling", dynlib: libORX.}
  ## Gets object's next sibling object. This function is typically used for iterating over the children objects of an object,
  ##  see orxObject_GetChild() for an iteration example.
  ##  Note: this function will filter out any camera or spawner and retrieve the next sibling object.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      Next sibling object / orxNULL

proc getNextChild*(pstObject: ptr orxOBJECT; pChild: pointer;
                            eStructureID: orxSTRUCTURE_ID): ptr orxSTRUCTURE {.
    cdecl, importc: "orxObject_GetNextChild", dynlib: libORX.}
  ## Gets object's next child structure of a given type (camera, object or spawner).
  ##  See orxObject_SetOwner() and orxObject_SetParent() for a comparison of
  ##  ownership and parenthood in Orx.
  ##  See orxObject_GetChild()/orxObject_GetSibling() if you want to only consider children objects.
  ##  This function is typically used to iterate over the children of an object.
  ##  @param[in]   _pstObject    Concerned object
  ##  @param[in]   _pChild         Concerned child to retrieve the next sibling, orxNULL to retrieve the first child
  ##  @param[in]   _eStructureID   ID of the structure to consider (camera, spawner, object or frame)
  ##  @return      Next child/sibling structure (camera, spawner, object or frame) / nil
  # TODO: Fix code examples
  #  For example, iterating over the immediate children cameras:
  #  @code
  #  for(orxCAMERA *pstChild = orxCAMERA(orxObject_GetNextChild(pstObject, orxNULL, orxSTRUCTURE_ID_CAMERA));
  #      pstChild != orxNULL;
  #      pstChild = orxCAMERA(orxObject_GetNextChild(pstObject, pstChild, orxSTRUCTURE_ID_CAMERA)))
  #  {
  #      DoSomethingWithCamera(pstChild);
  #  }
  #  @endcode

proc attach*(pstObject: ptr orxOBJECT; pParent: pointer): orxSTATUS {.cdecl,
    importc: "orxObject_Attach", dynlib: libORX.}
  ## Attaches an object to a parent while maintaining the object's world position.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pParent        Parent structure to attach to (object, spawner, camera or frame)
  ##  @return      orsSTATUS_SUCCESS / orxSTATUS_FAILURE

proc detach*(pstObject: ptr orxOBJECT): orxSTATUS {.cdecl,
    importc: "orxObject_Detach", dynlib: libORX.}
  ## Detaches an object from a parent while maintaining the object's world position.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orsSTATUS_SUCCESS / orxSTATUS_FAILURE

proc logParents*(pstObject: ptr orxOBJECT): orxSTATUS {.cdecl,
    importc: "orxObject_LogParents", dynlib: libORX.}
  ## Logs all parents of an object, including their frame data.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setAnimSet*(pstObject: ptr orxOBJECT; pstAnimSet: ptr orxANIMSET): orxSTATUS {.
    cdecl, importc: "orxObject_SetAnimSet", dynlib: libORX.}
  ## @}
  ## @name Animation
  ##  @{
  ## Sets an object animset.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pstAnimSet     Animation set to set / nil
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setAnimFrequency*(pstObject: ptr orxOBJECT; fFrequency: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxObject_SetAnimFrequency", dynlib: libORX.}
  ## Sets an object's relative animation frequency.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fFrequency     Frequency to set: < 1.0 for slower than initial, > 1.0 for faster than initial
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
